*could: dnssd client auto connect/reconnect
*could: dnssd client has a list of expected servers

1.3.
r
        fix:  a connector listener can now properly remove itself (stop listening) without throwing a concurrent modification exception
        fix:  problem in some cases when using removeAllConnectorListeners, some listeners might keep listening

1.3.1
r3063
        fix:  problem with sendToOneClient not sending anything in most of the classical use cases
        fix:  problem occuring when a server sends message in response to connectTo notification. Some messages where arriving too soon and client side listeners where not receiving it
        impr: (API) removed possibility to have a ConnectionRefused exception on connectTo when a connection was closed really fast. As one still have to handle the case where a connected/disconnected notification pair happen in place of this exception, it has been removed

1.3.0
r2907
        fix:  problem of wrong peerId passed to connector listeners when the client is a non-started service and has multiple connectors connected to a same connector
        fix:  no exception was thrown when adding too many connectors (more than 255) (see associated API impr below)
        fix:  querying variable value while having subscribe to its modifications was causing unnecessary remote variable listener notifications
        impr: (API) added closeConnection, closeAllConnections and removeAllConnectorListeners method to the Service interface
        impr: (API) added a ConnectorLimitReached runtime exception on Service#addConnector that is thrown when too many connectors are added to a service
        impr: on the model of removing the possible trailing "-2" on the hostname, all "-" followed by a one or two digit number is removed if needed
        impr: was using 100% cpu when waiting to connectTo (or when trying to connect to connector of buggous/nasty service)

1.2.0
r2609