@@ -16,6 +16,8 @@ In this files, you will find changes between java OMiSCID versions.
 r
         fix:  a connector listener can now properly remove itself (stop listening) without throwing a concurrent modification exception
         fix:  problem in some cases when using removeAllConnectorListeners, some listeners might keep listening
+TODO connector name check (see new failing tests) and the same with variables
+TODO add also check for unicity (case insensitive)
 
 1.3.1
 r3063
